WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
304395
[GTK][WPE] Fix an assert when threaded compositor is invalidated right before renderLayerTree is called
https://bugs.webkit.org/show_bug.cgi?id=304395
Summary
[GTK][WPE] Fix an assert when threaded compositor is invalidated right before...
Carlos Garcia Campos
Reported
2025-12-18 01:38:05 PST
The main thread invalidates the threaded compositor, which switches to Idle state, right before renderLayerTree is called in the compositing thread that hits the assert checking state should be Scheduled.
Attachments
Add attachment
proposed patch, testcase, etc.
Carlos Garcia Campos
Comment 1
2025-12-18 01:40:57 PST
Pull request:
https://github.com/WebKit/WebKit/pull/55617
EWS
Comment 2
2025-12-18 03:01:46 PST
Committed
304667@main
(42c5ccc3ebfa): <
https://commits.webkit.org/304667@main
> Reviewed commits have been landed. Closing PR #55617 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug