[GTK][WPE] Fix an assert when threaded compositor is invalidated right before renderLayerTree is called https://bugs.webkit.org/show_bug.cgi?id=304395

Reviewed by Nikolas Zimmermann.

The main thread invalidates the threaded compositor, which switches to
Idle state, right before renderLayerTree is called in the compositing
thread that hits the assert checking state should be Scheduled. We
should return early from renderLayerTree if the timer has already been
stopped.

Canonical link: https://commits.webkit.org/304667@main